--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-textarea-autosize": "^8.4.0",
+    "tributejs": "^5.1.3"
   },
   "browserslist": {
     "production": [
@@ -25,5 +27,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@faker-js/faker": "^7.6.0",
+    "core^7.0.0": "link:@babel/core^7.0.0",
+    "typescript": "4.1.6"
   }
 }
